# src/routes/validation.route.ts
@@ -5,7 +5,9 @@ const validationRoute = new Hono();
 
 validationRoute.get('/identity/:identityNumber', (c) => validationController.checkIdentity(c));
 validationRoute.get('/duplicates', (c) => validationController.getDuplicates(c));
+validationRoute.get('/logs', (c) => validationController.getLogs(c));
 validationRoute.post('/:id/clean', (c) => validationController.clean(c));
 validationRoute.get('/dashboard', (c) => validationController.getDashboard(c));
 
 export default validationRoute;
+
